<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_semesters"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codetrack.bscitians.SemestersActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                tools:ignore="ObsoleteLayoutParam,UselessParent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_light_background"
                    android:layout_margin="10dp"
                    android:layout_weight="0.05">

                    <Button
                        android:text="@string/sem1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sem1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#f39c12"
                        android:background="@drawable/rect2"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_light_background"
                    android:layout_margin="10dp"
                    android:layout_weight="0.05">

                    <Button
                        android:text="@string/sem2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sem2"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#c0392b"
                        android:background="@drawable/rect4"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_light_background"
                    android:layout_margin="10dp"
                    android:layout_weight="0.05">

                    <Button
                        android:text="@string/sem3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sem3"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#f39c12"
                        android:background="@drawable/rect2"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_light_background"
                    android:layout_margin="10dp"
                    android:layout_weight="0.05">

                    <Button
                        android:text="@string/sem4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sem4"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#c0392b"
                        android:background="@drawable/rect4"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_light_background"
                    android:layout_margin="10dp"
                    android:layout_weight="0.05">

                    <Button
                        android:text="@string/sem5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sem5"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#f39c12"
                        android:background="@drawable/rect2"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_light_background"
                    android:layout_margin="10dp"
                    android:layout_weight="0.05">

                    <Button
                        android:text="@string/sem6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/sem6"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#c0392b"
                        android:background="@drawable/rect4"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
