<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sem1fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.Sem2Fragment">





    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_weight="1"
        android:baselineAligned="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:id="@+id/ip_img"
                android:scaleType="fitCenter"
                android:contentDescription="@string/sub"
                android:src="@drawable/truboc"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="top"
            android:layout_weight="1"
            >

            <TextView
                android:text="@string/turbo_c_n_cg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cg_name"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:layout_margin="@dimen/text_size_large" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dl"
                android:layout_marginLeft="50dp"
                android:background="#2ecc71"
                android:textColor="#ffff"
                android:onClick="turboc"
                android:layout_marginBottom="10dp"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>

    </LinearLayout>
    <!---2 -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_weight="1"
        android:baselineAligned="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:id="@+id/mp8085_img"
                android:contentDescription="@string/sub"
                android:src="@drawable/mc"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="top"
            android:layout_weight="1"
            >

            <TextView
                android:text="@string/_8085_stimulator_n_mpmc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mp8085_name"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:layout_margin="@dimen/text_size_large"

                />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dl"
                android:layout_marginLeft="50dp"
                android:background="#2ecc71"
                android:textColor="#ffff"
                android:onClick="mp8085_download"
                android:layout_marginBottom="10dp"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>

    </LinearLayout>

    <!--- 3 -->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_marginBottom="10dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_weight="1"
        android:baselineAligned="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:id="@+id/wd_img"
                android:scaleType="fitCenter"
                android:contentDescription="@string/sub"
                android:src="@drawable/wd"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="top"
            android:layout_weight="1"
            >

            <TextView
                android:text="@string/notepad_n_wd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wd_name"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:layout_margin="@dimen/text_size_large"

                />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dl"
                android:layout_marginLeft="50dp"
                android:background="#2ecc71"
                android:textColor="#ffff"
                android:onClick="np_download"
                android:layout_marginBottom="10dp"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</android.support.constraint.ConstraintLayout>
        </ScrollView></RelativeLayout>